Fix display bug in cart button on mobile menu

--- a/app/assets/stylesheets/darkswarm/menu.css.scss
+++ b/app/assets/stylesheets/darkswarm/menu.css.scss
@@ -147,6 +147,7 @@ nav.top-bar {
 
     a, span {
       color: white;
+      display: inline-block;
     }
 
     .count {
